static/css/main.css
/* ... */
.image-comment-form h3 span {
  height: 45px;
  display: block;
  color: #fff600;
  line-height: 45px;
  white-space: nowrap;
  padding-left: 35px;
  padding-right: 20px;
  font-weight: bold;
  font-size: 18px;
  box-sizing: border-box;
}

.image-comment-form .field {
  margin: 20px 0;
  clear: both;
  text-align: right;
}

.image-comment-form textarea {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 5px;
  height: 130px;
}

/*----------------------------------------------
  UIMODULE: Pagination
---------------------------------------------- */

.pagination .previous-link {
  float: left;
  display: block;
}

.pagination .next-link {
  float: right;
  display: block;
}

span.next-link,
span.previous-link {
  color: #999;
}

.pagination {
  margin: 40px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  background-color: #e5fcff;
  padding: 10px;
  font-weight: bold;
  font-size: 14px;
  text-align: center;
}

.pagination-inner {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  background-color: #fff;
  padding: 10px;
}

.pagination a, .pagination .current{
  padding: 0 5px;
}


/* Sign-in */

#sign-in-form .field-submit {
  text-align: right;
}

.forgot-password-field {
  padding-top: 20px;
  text-align: right;
}

/* Forgot Password */

.password-manager-icon {
  float: left;
  padding-right: 20px;
}

/* slideshow */
.steps p {
    text-align:center;
}

.steps {
    display:none;
}

/* ---------------------------------------------------------------------
  Feature List (used on logged-out homepage)
--------------------------------------------------------------------- */
@media screen and (min-width: 480px) {
  .feature-list {
    display: flex;
    flex-wrap: wrap;
  }

  .feature-list .feature {
    flex: 1 1 50%;
  }
}

@media screen and (min-width: 768px) and (max-width: 959px) {
  .feature-list {
    flex-wrap: nowrap;
  }

  .feature-list .feature {
    flex-basis: 25%;
  }
}

/* ---------------------------------------------------------------------
  Features (used on logged-out homepage)
--------------------------------------------------------------------- */
.feature {
  border-left: 1px dashed #e0dfe0;
  border-top: 1px dashed #e0dfe0;
  margin: 0;
  padding: 15px;
  position: relative;
  box-sizing: border-box;
}

@media screen and (max-width: 479px) {
  .feature {
    border-left: none;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .feature:nth-child(2n - 1) {
    border-left: none;
  }
}

@media screen and (min-width: 768px) {
  .feature {
    padding: 25px;
  }

  .feature:first-child {
    border-left: none;
  }
}

@media screen and (min-width: 960px) {
  .feature {
    display: flex;
    flex-direction: row-reverse;
    padding: 35px;
  }

  .feature:nth-child(2n - 1) {
    border-left: none;
  }

  .feature--content {
    flex: 1 1 auto;
  }

  .feature--image {
    flex: 0 0 163px;
  }
}

/* feature content */
.feature > * + * {
  margin-top: 15px;
}

@media screen and (min-width: 768px) {
  .feature > * + * {
    margin-top: 25px;
  }
}

@media screen and (min-width: 960px) {
  .feature > * + * {
    margin-right: 20px;
    margin-top: 0;
  }
}

/* feature image */
.feature--image-media {
  display: block;
  margin: 0 auto;
}

/* feature title */
.feature--title {
  color: #000;
  font-size: 22px;
  margin: 0;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .feature--title {
    text-align: left;
  }
}

/* feature body copy */
.feature--body {
  color: #4b4b4b;
  font-size: 14px;
  line-height: 1.25;
  margin: 10px 0 0;
}

.feature--body p {
  margin: 0;
}

.feature--body p + p {
  margin-top: 1.25em;
}

.feature--cta {
  text-align: center;
}

/* Primary Feature Modifier */
.feature--primary {
  border: none;
}

@media screen and (min-width: 960px) {
  .feature--primary > * {
    flex: 1;
  }

  .feature--primary > * + * {
    margin-right: 70px;
  }
}

.feature--primary .feature--title {
  font-size: 42px;
  letter-spacing: -3px;
  line-height: 90%;
}

@media screen and (min-width: 768px) {
  .feature--primary .feature--title {
    font-size: 60px;
  }
}

@media screen and (min-width: 960px) {
  .feature--primary .feature--title {
    font-size: 72px;
  }
}

.feature--primary .feature--body {
  color: #6a6a6a;
  font-size: 16px;
  margin-top: 1.25em;
}

/* Reversed Feature Modifier */
@media screen and (min-width: 960px) {
  .feature--flipped {
    flex-direction: row;
  }

  .feature--flipped > * + * {
    margin-left: 20px;
    margin-right: 0;
  }

  .feature--flipped.feature--primary > * + * {
    margin-left: 70px;
  }
}


/* Friends Page */

.account-header {
  padding: 24px 30px 16px;
  background: linear-gradient(to bottom, rgba(255,255,255,0), #fff calc(100% - 6px), #eee);
}

.account-header .avatar {
  display: flex;
}

.account-header .avatar-media {
  flex: none;
}

.account-header .avatar img {
  display: block;
}

.account-header h2 {
  font-size: 42px;
  line-height: 50px;
  font-weight: bold;
  padding-left: 24px;
  word-break: break-word;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.image-poster {
  padding-right: 10px;
  float: left;
}

.bookmark {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

@media screen and (min-width: 480px) {
  .bookmark {
    flex-direction: row;
  }
}

.bookmark-flag {
  flex: none;
  margin-top: -3px;
  background: #ff0180;
  color: #fff;
  font-weight: bold;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.bookmark-flag::before,
.bookmark-flag::after,
.bookmark-flag span::before,
.bookmark-flag span::after {
  position: absolute;
  content: '';
  display: block;
}

.bookmark-flag::before {
  width: 5px;
  height: 100%;
  padding-bottom: 5px;
  top: 0;
  left: -5px;
  background: inherit;
  border-radius: 5px 0 0 5px;
}
/* ... */

